--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,11 @@
 body {
     font-size: 120%;
-    font-family: Arial;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   
   button, input {
     font-size: 100%;
-    font-family: Arial;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   
   table {
